--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,14 @@ spring.datasource.initialize=true
 spring.datasource.data=classpath*:db/${database}/dataHibernate.sql
 spring.datasource.url=jdbc:mysql://localhost/petclinic
 spring.datasource.username=root
-spring.datasource.password=Everis2017
+spring.datasource.password=root
 
 
 # Web
 spring.thymeleaf.mode=HTML
 
 # JPA
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # Internationalization
 spring.messages.basename=messages/messages
